--- a/frontend/pulsar_palace/src/components/footer/Footer.scss
+++ b/frontend/pulsar_palace/src/components/footer/Footer.scss
@@ -150,7 +150,7 @@
   .footer_form {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     gap: 1rem;
     width: calc(33.33% - 6.25rem);
     padding-right: 6.25rem;
@@ -172,6 +172,11 @@
       input {
         font-family: "Poppins", sans-serif;
         border-radius: 5px;
+        border: none;
+        padding: 0.3rem 0.5rem;
+      }
+      textarea {
+        padding: 0.5rem 0.5rem;
       }
     }
 
@@ -179,7 +184,6 @@
       width: fit-content;
       border: none;
       padding: 0.5rem 1rem;
-      margin-right: 2.7rem;
       background-color: white;
       border-radius: 20px;
       cursor: pointer;
