--- a/frontend/pulsar_palace/src/components/footer/Footer.scss
+++ b/frontend/pulsar_palace/src/components/footer/Footer.scss
@@ -154,20 +154,36 @@
     gap: 1rem;
     width: calc(33.33% - 6.25rem);
     padding-right: 6.25rem;
+  }
+
+  .footer_socials {
+    width: 33.33%;
+    height: calc(100% - 1rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 2rem;
+    padding-bottom: 1rem;
+    padding-right: 100px;
+    font-size: 1.5rem;
 
     .input_container {
       display: flex;
-      justify-content: flex-end;
+      flex-direction: column;
       align-items: center;
-      gap: 1rem;
+      justify-content: center;
+      padding-top: 1rem;
 
-      textarea {
-        max-width: 14.6rem;
-        max-height: 4.75rem;
-        height: 4.75rem;
-        width: 10.2rem;
-        font-family: "Poppins", sans-serif;
-        border-radius: 5px;
+      .subscribe {
+        font-size: 1rem;
+      }
+      .textttt {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 1rem;
+        padding-top: 2rem;
       }
       input {
         font-family: "Poppins", sans-serif;
@@ -175,52 +191,36 @@
         border: none;
         padding: 0.3rem 0.5rem;
       }
-      textarea {
-        padding: 0.5rem 0.5rem;
+
+      button {
+        width: fit-content;
+        border: none;
+        padding: 0.3rem 1rem;
+        background-color: white;
+        border-radius: 20px;
+        cursor: pointer;
+        font-family: "Poppins", sans-serif;
+
+        &:hover {
+          box-shadow: 0 0 10px 1px white;
+          transition: 0.2s ease-in-out;
+        }
       }
     }
 
-    button {
-      width: fit-content;
-      border: none;
-      padding: 0.5rem 1rem;
-      background-color: white;
-      border-radius: 20px;
-      cursor: pointer;
-      font-family: "Poppins", sans-serif;
-
-      &:hover {
-        box-shadow: 0 0 10px 1px white;
-        transition: 0.2s ease-in-out;
-      }
-    }
-  }
-
-  .footer_socials {
-    width: 33.33%;
-    height: calc(100% - 1rem);
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
-    gap: 2rem;
-    padding-bottom: 1rem;
-    font-size: 1.5rem;
-
-    .container {
-      width: 2.5rem;
-      height: 2.5rem;
-      background-color: white;
-      border-radius: 50%;
+    .icons_cont {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      align-items: flex-end;
+      justify-content: flex-end;
+      gap: 2rem;
+    }
+
+    .social {
       cursor: pointer;
     }
   }
 
   .footer_links {
-    width: calc(33.33% - 6.25rem);
     height: 13.5rem;
     padding-left: 6.25rem;
     display: flex;
