--- a/frontend/pulsar_palace/src/components/products/Products.scss
+++ b/frontend/pulsar_palace/src/components/products/Products.scss
@@ -14,3 +14,59 @@
   text-align: center;
   margin-top: 6.25rem;
 }
+
+.search_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  color: white;
+  font-family: "poppins", sans-serif;
+  position: relative;
+
+  input {
+    width: 500px;
+    border-radius: 30px;
+    border: none;
+    padding: 5px 1rem;
+    font-family: "poppins", sans-serif;
+  }
+
+  .searchIcon_cont {
+    cursor: pointer;
+    background-color: transparent;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    border-radius: 50%;
+    transition: 0.2s ease;
+
+    &:hover {
+      background-color: #888;
+      transition: 0.2s ease;
+    }
+  }
+  .search_list {
+    position: absolute;
+    background-color: white;
+    color: black;
+    width: 500px;
+    top: 35px;
+    border-radius: 10px;
+    padding: 1rem 1rem;
+    z-index: 2;
+  }
+
+  .searchFiltered {
+    font-size: 0.8rem;
+    padding: 0.1rem;
+    padding-left: 0.3rem;
+
+    &:hover {
+      background-color: #a3a3a3;
+      cursor: pointer;
+    }
+  }
+}
