--- a/frontend/pulsar_palace/src/components/about/About.scss
+++ b/frontend/pulsar_palace/src/components/about/About.scss
@@ -111,3 +111,47 @@
     }
   }
 }
+
+@media (max-width: 580px) {
+  .about_body {
+    padding: 200px 50px 0 50px;
+  }
+  .about_body .header .title {
+    font-size: 2rem;
+  }
+  .about_body .header {
+    padding: 0 0 50px 0;
+  }
+}
+
+@media (max-width: 410px) {
+  .createdBy_section .card_containerrrr img {
+    width: 200px;
+  }
+  .about_body {
+    padding: 200px 20px 0 20px;
+  }
+  .createdBy_section {
+    padding: 0;
+  }
+  .about_body .text_containerrr .paragraph {
+    width: 100%;
+    font-size: 0.8rem;
+  }
+  .about_body .header .title {
+    font-size: 1.2rem;
+  }
+  .about_body .header .about_title {
+    font-size: 0.8rem;
+  }
+
+  .createdBy_section .card_containerrrr .topHover .name h3 {
+    font-size: 1rem;
+  }
+  .createdBy_section .card_containerrrr .topHover .name div {
+    font-size: 0.8rem;
+  }
+  .createdBy_section .card_containerrrr .topHover .socials {
+    font-size: 1rem;
+  }
+}
