--- a/frontend/pulsar_palace/src/components/products/cart/Cart.scss
+++ b/frontend/pulsar_palace/src/components/products/cart/Cart.scss
@@ -19,33 +19,6 @@
         -10px 10px 1px rgba($color: rgb(89, 89, 89), $alpha: 1),
         -15px 15px 1px rgba($color: rgb(46, 46, 46), $alpha: 1);
 
-      .headers {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        padding: 0 2rem;
-        text-align: center;
-        .meme {
-          width: calc(723.28px - 64px);
-          display: flex;
-          gap: 1rem;
-          padding: 0 32px;
-        }
-        .pro,
-        .qu,
-        .pri {
-          width: 33.33%;
-          text-align: center;
-        }
-        .fst {
-          width: 96px;
-        }
-        .fin {
-          width: 45.2px;
-        }
-      }
-
       .inner {
         width: 100%;
         border-radius: 10px;
@@ -56,6 +29,7 @@
     }
 
     .item_card {
+      width: 100%;
       display: flex;
       gap: 1rem;
       border-radius: 10px;
@@ -110,6 +84,43 @@
   }
 }
 
+.item_card1 {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+
+  .closeBTN {
+    padding-left: 45.2px;
+  }
+
+  .image {
+    span {
+      padding-left: 96px;
+    }
+  }
+
+  .description {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 2rem;
+    color: white;
+    text-align: center;
+    .name {
+      width: 33.33%;
+    }
+    .quantity {
+      width: 33.33%;
+      text-align: center;
+    }
+
+    .price {
+      width: 33.33%;
+    }
+  }
+}
+
 .checkout_container {
   width: 30%;
   display: flex;
@@ -153,5 +164,147 @@
         transition: 0.3s ease-in-out;
       }
     }
+  }
+}
+
+@media (max-width: 1440px) {
+  .cartt_container .cart_inner_container {
+    justify-content: center;
+  }
+  .cartt_container .cart_inner_container .cart_contents {
+    width: 50%;
+  }
+}
+
+@media (max-width: 1240px) {
+  .cartt_container .cart_inner_container {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+  .cartt_container .cart_inner_container .cart_contents {
+    width: calc(100% - 4rem);
+  }
+  .checkout_container {
+    width: 100%;
+  }
+  .checkout_container .checkout {
+    width: 100%;
+    padding: 1rem 4rem;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 850px) {
+  .cartt_container .cart_inner_container .cart_contents {
+    font-size: 0.8rem;
+  }
+  .checkout_container .checkout {
+    font-size: 0.8rem;
+  }
+  .checkout_container .checkout .checkout_btn {
+    font-size: 0.8rem;
+    width: 6rem;
+    padding: 0.8rem 1rem;
+  }
+}
+
+@media (max-width: 762px) {
+  .cartt_container .cart_inner_container .item_card .description {
+    padding: 0.5rem 0;
+  }
+  .cartt_container .cart_inner_container .item_card .image img {
+    height: 2rem;
+    width: 3rem;
+  }
+  .item_card1 .description {
+    padding: 0;
+  }
+  .checkout_container .checkout {
+    gap: 0.5rem;
+  }
+  .cartt_container {
+    padding: 6.25rem 3rem;
+  }
+}
+
+@media (max-width: 542px) {
+  .cartt_container .cart_inner_container .cart_contents {
+    font-size: 0.6rem;
+  }
+  .checkout_container .checkout {
+    font-size: 0.6rem;
+  }
+  .checkout_container .checkout .checkout_btn {
+    font-size: 0.6rem;
+    width: 6rem;
+    padding: 0.8rem 1rem;
+  }
+  .item_card1 .description {
+    font-size: 0.6rem;
+  }
+  .cartt_container .cart_inner_container .item_card .closeBTN span {
+    font-size: 0.6rem;
+  }
+}
+
+@media (max-width: 483px) {
+  .cartt_container .cart_inner_container .cart_contents {
+    font-size: 0.5rem;
+  }
+  .checkout_container .checkout {
+    font-size: 0.5rem;
+  }
+  .checkout_container .checkout .checkout_btn {
+    font-size: 0.5rem;
+    width: 6rem;
+    padding: 0.8rem 1rem;
+  }
+  .item_card1 .description {
+    font-size: 0.3rem;
+    gap: 0.5rem;
+  }
+  .cartt_container .cart_inner_container .item_card .closeBTN span {
+    font-size: 0.5rem;
+  }
+  .cartt_container .cart_inner_container .item_card .description {
+    gap: 0.5rem;
+  }
+  .cartt_container .cart_inner_container .cart_contents {
+    gap: 0.5rem;
+  }
+  .cartt_container .cart_inner_container .item_card .image img {
+    width: 2rem;
+    height: 1.5rem;
+  }
+
+  .cartt_container .cart_inner_container .cart_contents {
+    padding: 1rem 1rem;
+    width: calc(100% - 2rem);
+  }
+  .cartt_container h1 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .item_card1 {
+    display: none;
+  }
+  .cartt_container .cart_inner_container .cart_contents .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .cartt_container .cart_inner_container .item_card .image img {
+    padding: 0.5rem;
+  }
+  .checkout_container .checkout .checkout_btn {
+    width: 5rem;
+    padding: 0.6rem 0.8rem;
+  }
+  .cartt_container {
+    padding: 6.25rem 2rem 0rem 2rem;
   }
 }
