--- a/frontend/pulsar_palace/src/components/products/information/Information.scss
+++ b/frontend/pulsar_palace/src/components/products/information/Information.scss
@@ -56,7 +56,7 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
-    margin: 8.25rem  6.25rem 6.25rem 6.25rem;
+    margin: 8.25rem 6.25rem 6.25rem 6.25rem;
     .img_container {
       border-radius: 10px;
       padding: 1rem;
@@ -118,7 +118,7 @@
         gap: 1rem;
         position: absolute;
         bottom: 2.7rem;
-        left: 2rem;
+        right: 78%;
         input {
           font-family: "poppins", sans-serif;
           width: 2rem;
@@ -152,17 +152,111 @@ input[type="number"]::-webkit-inner-spin-button {
       -10px 10px 1px rgba($color: rgb(89, 89, 89), $alpha: 1),
       -15px 15px 1px rgba($color: rgb(46, 46, 46), $alpha: 1);
 
-    .container{
+    .container {
       background-color: rgb(233, 244, 253);
       border-radius: 10px;
       display: flex;
       gap: 2rem;
       padding: 1rem;
 
-      .title{
+      .title {
         font-weight: 600;
         font-size: 1.2rem;
       }
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  .details_container .main_detials .text_container .quantity {
+    right: 60%;
+  }
+}
+
+
+@media (max-width: 890px) {
+  .details_container .main_detials .text_container .price {
+    font-size: 1rem;
+  }
+  .details_container .main_detials .text_container h1 {
+    font-size: 1.5rem;
+  }
+  .details_container .main_detials .text_container p {
+    font-size: 1rem;
+  }
+  .details_container .main_detials .text_container .quantity {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 820px) {
+  .details_container .main_detials .text_container .quantity {
+    bottom: 6rem;
+    right: 2rem;
+  }
+}
+
+@media (max-width: 762px) {
+  .details_container .main_detials .text_container .price {
+    font-size: 0.8rem;
+  }
+  .details_container .main_detials .text_container h1 {
+    font-size: 1rem;
+  }
+  .details_container .main_detials .text_container p {
+    font-size: 0.8rem;
+  }
+  .details_container .main_detials .text_container .quantity {
+    font-size: 0.6rem;
+  }
+  .details_container .main_detials .text_container {
+    font-size: 0.8rem;
+  }
+  .details_container .main_detials .text_container .quantity {
+    bottom: 6rem;
+  }
+  .details_container .main_detials .text_container .quantity input {
+    width: 1.5rem;
+    height: 1rem;
+  }
+  .details_container .main_detials {
+    flex-direction: column;
+    margin: 8.25rem 50px 50px 50px;
+  }
+  .details_container .main_detials .img_container {
+    width: 90%;
+    height: 40%;
+  }
+  .details_container .main_detials .text_container {
+    height: 400px;
+    padding: 0;
+  }
+  .details_container .main_detials .text_container {
+    width: 90%;
+  }
+  .extra_details .info_table .container .title {
+    font-size: 1rem;
+  }
+  .extra_details .info_table .container .yes {
+    font-size: 0.8rem;
+  }
+  .extra_details {
+    margin: 50px 50px;
+  }
+  .extra_details h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .details_container .main_detials .text_container p {
+    font-size: 0.6rem;
+  }
+  .extra_details .info_table .container {
+    gap: 1rem;
+    flex-direction: column;
+  }
+  .swiper-button-next, .swiper-button-prev{
+    display: none;
   }
 }
