--- a/frontend/pulsar_palace/src/components/products/cart/Cart.scss
+++ b/frontend/pulsar_palace/src/components/products/cart/Cart.scss
@@ -8,6 +8,7 @@
     display: flex;
     .cart_contents {
       width: 70%;
+      min-height: 40svh;
       padding: 2rem;
       border: 2px solid white;
       border-radius: 10px;
@@ -29,6 +30,7 @@
     }
 
     .item_card {
+      height: 100px;
       width: 100%;
       display: flex;
       gap: 1rem;
@@ -51,11 +53,15 @@
       }
 
       .image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
         img {
           padding: 1rem;
           width: 4rem;
-          border-radius: 10px;
-          height: 4rem;
+          border-radius: 20px;
+          height: calc(100% - 2rem);
           object-fit: cover;
         }
       }
@@ -214,10 +220,6 @@
   .cartt_container .cart_inner_container .item_card .description {
     padding: 0.5rem 0;
   }
-  .cartt_container .cart_inner_container .item_card .image img {
-    height: 2rem;
-    width: 3rem;
-  }
   .item_card1 .description {
     padding: 0;
   }
@@ -225,7 +227,7 @@
     gap: 0.5rem;
   }
   .cartt_container {
-    padding: 6.25rem 3rem;
+    padding: 6.25rem 30px;
   }
 }
 
@@ -250,23 +252,15 @@
 }
 
 @media (max-width: 483px) {
-  .cartt_container .cart_inner_container .cart_contents {
-    font-size: 0.5rem;
-  }
-  .checkout_container .checkout {
-    font-size: 0.5rem;
+  .item_card1 .description {
+    display: none;
   }
   .checkout_container .checkout .checkout_btn {
-    font-size: 0.5rem;
     width: 6rem;
     padding: 0.8rem 1rem;
   }
   .item_card1 .description {
-    font-size: 0.3rem;
     gap: 0.5rem;
-  }
-  .cartt_container .cart_inner_container .item_card .closeBTN span {
-    font-size: 0.5rem;
   }
   .cartt_container .cart_inner_container .item_card .description {
     gap: 0.5rem;
@@ -274,24 +268,17 @@
   .cartt_container .cart_inner_container .cart_contents {
     gap: 0.5rem;
   }
-  .cartt_container .cart_inner_container .item_card .image img {
-    width: 2rem;
-    height: 1.5rem;
-  }
 
   .cartt_container .cart_inner_container .cart_contents {
     padding: 1rem 1rem;
     width: calc(100% - 2rem);
   }
   .cartt_container h1 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
 @media (max-width: 375px) {
-  .item_card1 {
-    display: none;
-  }
   .cartt_container .cart_inner_container .cart_contents .image {
     display: flex;
     justify-content: center;
@@ -299,6 +286,8 @@
   }
   .cartt_container .cart_inner_container .item_card .image img {
     padding: 0.5rem;
+    width: 50px;
+    height: 50px;
   }
   .checkout_container .checkout .checkout_btn {
     width: 5rem;
@@ -306,5 +295,11 @@
   }
   .cartt_container {
     padding: 6.25rem 2rem 0rem 2rem;
+  }
+  .cartt_container .cart_inner_container .item_card .description {
+    font-size: 0.5rem;
+  }
+  .cartt_container .cart_inner_container .item_card{
+    height: 80px;
   }
 }
