--- a/frontend/pulsar_palace/src/components/products/information/Information.scss
+++ b/frontend/pulsar_palace/src/components/products/information/Information.scss
@@ -241,7 +241,8 @@ input[type="number"]::-webkit-inner-spin-button {
     font-size: 0.8rem;
   }
   .extra_details {
-    margin: 50px 30px 150px 30px;
+    padding: 50px 30px 250px 30px;
+    margin: 0;
   }
   .extra_details h1 {
     font-size: 1.5rem;
