--- a/frontend/pulsar_palace/src/components/home/scroll section/ScrollSection.scss
+++ b/frontend/pulsar_palace/src/components/home/scroll section/ScrollSection.scss
@@ -87,3 +87,42 @@
     font-size: 0.8rem;
   }
 }
+
+@media (max-width: 320px) {
+  .scroll_container {
+    padding: 0 20px;
+    width: calc(100% - 40px);
+  }
+
+  .scroll_container .right_scroll_section img {
+    height: 150px;
+  }
+
+  .scroll_container .right_scroll_section {
+    height: 400px;
+  }
+
+  .hero_container .hero_text h1 {
+    top: 100px;
+  }
+
+  .hero_container .hero_text p {
+    top: 250px;
+  }
+  .hero_container .hero_text .explore_button_container {
+    bottom: 40px;
+  }
+
+  .hero_container .hero_banner .iphone {
+    top: 150px;
+    width: 60%;
+    left: 110px;
+    height: 90%;
+  }
+  .hero_container .hero_banner .samsung {
+    top: 170px;
+    width: 50%;
+    left: 50px;
+    height: 80%;
+  }
+}
