long time update

--- a/frontend/pulsar_palace/src/components/orders/Orders.scss
+++ b/frontend/pulsar_palace/src/components/orders/Orders.scss
@@ -1,6 +1,6 @@
 .ord_cont {
   font-family: "poppins", sans-serif;
-  min-height: 100svh;
+  // min-height: 100svh;
   padding: 100px 100px;
   display: flex;
   flex-direction: column;
