--- a/frontend/pulsar_palace/src/components/auth/Login.scss
+++ b/frontend/pulsar_palace/src/components/auth/Login.scss
@@ -6,7 +6,7 @@
 }
 .login_section {
   height: 100svh;
-  background: url("../../assets/gradiant.jpg");
+  background: url('../../assets/gradiant.jpg');
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -31,7 +31,7 @@
     justify-content: center;
     gap: 2rem;
     color: white;
-    font-family: "poppins", sans-serif;
+    font-family: 'poppins', sans-serif;
     position: relative;
 
     .errorMsg {
@@ -60,7 +60,7 @@
     .log_sign_btn {
       cursor: pointer;
       border: none;
-      font-family: "poppins", sans-serif;
+      font-family: 'poppins', sans-serif;
       padding: 1rem 2rem;
       border-radius: 30px;
       transition: 0.3s ease;
@@ -72,7 +72,7 @@
     }
 
     input {
-      font-family: "poppins", sans-serif;
+      font-family: 'poppins', sans-serif;
       width: 220px;
       padding: 0.3rem 0.5rem;
       border-radius: 5px;
@@ -96,7 +96,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: "poppins", sans-serif;
+    font-family: 'poppins', sans-serif;
     position: relative;
 
     img {
@@ -154,11 +154,8 @@
 .login_section_mobile {
   display: none;
   height: 100svh;
-  background: url("../../assets/gradiant.jpg");
+  background: url('../../assets/gradiant.jpg');
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   .login_box_container {
     width: 700px;
@@ -181,7 +178,7 @@
     justify-content: center;
     gap: 1rem;
     color: white;
-    font-family: "poppins", sans-serif;
+    font-family: 'poppins', sans-serif;
     position: relative;
 
     .errorMsg {
@@ -210,7 +207,7 @@
     .log_sign_btn {
       cursor: pointer;
       border: none;
-      font-family: "poppins", sans-serif;
+      font-family: 'poppins', sans-serif;
       padding: 0.5rem 2rem;
       border-radius: 30px;
       transition: 0.3s ease;
@@ -223,7 +220,7 @@
     }
 
     input {
-      font-family: "poppins", sans-serif;
+      font-family: 'poppins', sans-serif;
       width: 250px;
       padding: 0.3rem 0.5rem;
       border-radius: 5px;
@@ -251,7 +248,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: "poppins", sans-serif;
+    font-family: 'poppins', sans-serif;
     position: relative;
 
     .coco {
@@ -333,11 +330,13 @@
   }
   .login_section_mobile {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
 @media (max-width: 510px) {
-  .login_section_mobile{
+  .login_section_mobile {
     align-items: flex-end;
   }
 }
