--- a/frontend/pulsar_palace/src/components/products/information/Information.scss
+++ b/frontend/pulsar_palace/src/components/products/information/Information.scss
@@ -44,7 +44,7 @@
 }
 
 .details_container {
-  height: 200svh;
+  min-height: 200svh;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -249,6 +249,9 @@ input[type="number"]::-webkit-inner-spin-button {
   }
   .swiper-button-next, .swiper-button-prev{
     display: none;
+  }
+  .extra_details{
+    padding: 50px 30px 100px 30px;
   }
 }
 
